--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>hi girlie</h1>
+    <main>
+        <h2>main section</h2>
+        <section>
+            <h3>section 1</h3>
+        </section>
+        <section>
+            <h3>section 2</h3>
+        </section>
+    </main>
 </body>
 </html>
