index modified on new branch, footer element added

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
             <h3>section 2</h3>
         </section>
     </main>
+    <footer>
+        <h2>footer moment</h2>
+    </footer>
 </body>
 </html>
